Adding full pipeline interpreter for simple addition

--- a/src/Fisp.Test/Fisp.Test.fsproj
+++ b/src/Fisp.Test/Fisp.Test.fsproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="LexerTests.fs" />
+    <Compile Include="ParserTests.fs" />
+    <Compile Include="EvaluationTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
